updated projects page, about section, added detail to experience section

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/jordan_edmunds_circle.jpeg" alt="" / style="width: 100px; border-radius: 50%"></span>
 						<h1>Jordan Edmunds, Ph.D.</h1>
-						<p>Hardware / Software Engineer, Manager, and Educator<br />
+						<p>Hardware / Software Engineer, Manager, and King Nerd<br />
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro" class="active">About Me</a></li>
-							<li><a href="#first">Skills</a></li>
+							<li><a href="#first">Uniqueness</a></li>
 							<li><a href="#second">Projects</a></li>
 							<li><a href="#cta">Experience</a></li>
 						</ul>
@@ -45,8 +45,14 @@
 											<h2>About Me</h2>
 										</header>
 										<p>
-                                        I started my career as a software engineer, dual-booting my first linux machine at the age of 14, and landed my first tech internship at 16. I have worked as the technical founder of a venture-backed startup, a software engineer at Meta, and a scientist at UC Berkeley pushing the boundaries of neural interfaces. I have broad technical experience in software engineering, web development, DevOps, electrical engineering, biology, statistics, fabrication, and vacuum systems. I most love teaching, mentoring, and management.
+                                        I am a software engineer and future DevOps manager. I have worked as the technical founder of a venture-backed startup, a software engineer at Meta, and a scientist at UC Berkeley pushing the boundaries of neural interfaces.
+                                        </p>
+                                        <p>
+                                        I have broad technical experience in software engineering, web development, DevOps, electrical engineering, biology, statistics, fabrication, and vacuum systems. If it operates with electrons, photons, or bits, I can probably explain to you how it works.
 										</p>
+                                        <p>
+                                        I love teaching and mentoring, and thrive most in supportive roles - especially in education, infrastructure, manegement, or a combination of all three.
+                                        </p>
 										<ul class="actions">
 											<li><a href="about.html" class="button">Learn More</a></li>
 										</ul>
@@ -58,65 +64,65 @@
 						<!-- First Section -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>Skills</h2>
+									<h2>What makes me unique?</h2>
 								</header>
 								<ul class="features">
 									<li>
-										<span class="icon solid major style1 fa-code"></span>
-										<h3>Web Development</h3>
-										<p>A seasoned full-stack web developer, my favorite stack is Django / React / Next.js / Tailwind.
+										<span class="icon solid major style1 fa-gem"></span>
+										<h3>Empathetic and Inclusive</h3>
+                                        <p>
+                                        What I consider one of my strongest points - I care about the people around me, and thrive on their success. I believe the best ideas come from creating psychological safety, and the best ideas I've ever used have come from other people.
+                                        </p>
 									</li>
 									<li>
-										<span class="icon major style3 fa-copy"></span>
-										<h3>Project Management</h3>
-                                        <p>I have been running my own projects since 2016, and can independently drive results across a range of domains</p>
+										<span class="icon major style5 fa-copy"></span>
+										<h3>Independently Driven</h3>
+                                        <p>
+                                        I don't think I have ever been told exactly <em>what</em> to do or <em>how</em> to do it. Point me in a general direction and I'll forge the path to get you there. I've been doing it for over a decade.
+                                        </p>
 									</li>
 									<li>
-										<span class="icon major style5 fa-gem"></span>
-										<h3>DevOps</h3>
-                                        <p>I've been working on infrastructure and improving developer experience in every role I've been in, and it's my favorite technical role.</p>
+										<span class="icon solid major style3 fa-code"></span>
+										<h3>Excellent Communicator</h3>
+                                        <p>
+                                        As a longtime teacher and educator, I am unusually good at breaking down and explaining complex topics at any level of detail or abstraction, and gauging the needs of my audience. It's why I'll fly through your interview process - I'll even bet money on it.
+                                        </p>
 									</li>
 								</ul>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
 							</section>
 
 						<!-- Second Section -->
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Projects</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+                                    <p>I have worked across industries, with a focus on software engineering, DevOps, and electronics.</p>
+                                    <p>Want to see some examples of my work? Check out my <a href="https://github.com/edmundsj">Github</a> or click on the link below.</p>
 								</header>
 								<ul class="statistics">
 									<li class="style1">
 										<span class="icon solid fa-code-branch"></span>
-										<strong>5,120</strong> Etiam
+                                        <strong>>1000</strong> Commits
 									</li>
 									<li class="style2">
 										<span class="icon fa-folder-open"></span>
-										<strong>8,192</strong> Magna
+                                        <strong>>40</strong> Projects
 									</li>
 									<li class="style3">
 										<span class="icon solid fa-signal"></span>
-										<strong>2,048</strong> Tempus
+										<strong>8</strong> Years Experience
 									</li>
 									<li class="style4">
 										<span class="icon solid fa-laptop"></span>
-										<strong>4,096</strong> Aliquam
+                                        <strong>>200,000</strong> LOC
 									</li>
 									<li class="style5">
-										<span class="icon fa-gem"></span>
-										<strong>1,024</strong> Nullam
+										<span class="icon fa-star"></span>
+                                        <strong>>50</strong> Github Stars
 									</li>
 								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
+										<li><a href="projects.html" class="button">Learn More</a></li>
 									</ul>
 								</footer>
 							</section>
@@ -125,8 +131,46 @@
 							<section id="cta" class="main special">
 								<header class="major">
 									<h2>Experience</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+                                <section style="text-align: left">
+                                    <h3 style="text-align: center">Software Engineer @ Meta: 2023 - Present</h3>
+                                    <p>
+                                    <strong>Why I took the job: </strong> The opportunity to learn how software development is done at a modern tech giant, and work on some really cool, cutting-edge technology with people at the top of their game.
+                                    <br/>
+                                    <strong>What I love: </strong> The people are excellent, the culture is healthy and positive and outcome-oriented. The scale and complexity of the work is also awesome.
+                                    <br/>
+                                    <strong>What I am learning: </strong> Exactly what I was hoping for.
+
+                                    </p>
+                                    <h3 style="text-align: center">Co-founder and CTO @ Axle Repair: 2022 - 2023</h3>
+                                    <p>
+                                    <strong>Why I took the job:</strong> I had always wanted to start my own company. I wanted to learn how companies evolve, how systems and cultures are created, how capital is raised, and how customers problems are found and solved.
+                                    <br/>
+                                    <strong>What I loved: </strong>Hirinig and managing a team. Learning huge amounts of technical and non-technical information, and having to retain and use it every day. Most of all, being able to solve real problems for real people, and seeing their excitement at what we were building.
+                                    <br/>
+                                    <strong>What I learned: </strong>How to ingest huge amounts of information in a small amonut of time and retain nearly all of it (I have a whole system now). I learned that I value people above material success, and want to take care of those I am responsible for. How modern web development is done.
+                                    </p>
+
+                                    <h3 style="text-align: center">Graduate student researcher @ UC Berkeley: 2018 - 2022</h3>
+                                    <p>
+                                    <strong>Why I took the job:</strong> My technical education just felt so unfinished. I was hungry to learn more of the fundamentals - of electronic systems, software systems, and complexity itself. I wanted to understand how science was actually done, how software was maintained and created, and how to provide effective higher education.
+                                    <br/>
+                                    <strong>What I loved:</strong> The team at the Marvell Nanofabrication facility. Those are some of the most top-tier human beings I have ever worked with. Also getting to do cutting-edge science with expensive toys was fun. And the math - loved the math :).
+                                    <br/>
+                                    <strong>What I learned: </strong>How to break down, analyze, and understand complex systems. How to work with tremendous uncertainty, how to fail quickly and learn from failures, and how to manage projects in the presence of significant unknowns.
+                                    </p>
+
+                                    <h3 style="text-align: center">R&D Intern @ Modern Electron: 2021</h3>
+                                    <p>
+                                        <strong>Why I took the job: </strong> The opportunity to work on a pressing problem in a space I knew nothing about (energy) and on new things and with technology I had never worked with. Also the opportunity to work with Max Mankin and Alex Pearse. Both incredible human beings.
+                                        <br/>
+                                        <strong>What I loved: </strong> The work culture was incredibly positive. Management was supportive, the people hired were excellent at what they do and cared about each other. A great work environment. Washington state was also a beautiful place to live.
+                                        <br/>
+                                        <strong>What I learned: </strong>How to move fast in a startup environment. How to decide when analysis is "good enough" to move on, and how to interface with many other people and vendors to get things done.
+                                        <br/>
+                                    </p>
+
+
+                                </section>
 								</header>
 								<footer class="major">
 									<ul class="actions special">
@@ -141,8 +185,8 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
+							<h2>Working with me</h2>
+                            <p>Want to work together? Think I would be a good fit for a particular role? I'd love to hear from you! Shoot me an e-mail or message me on Linkedin.</p>
 							<ul class="actions">
 								<li><a href="generic.html" class="button">Learn More</a></li>
 							</ul>
