--- a/about.html
+++ b/about.html
@@ -58,9 +58,12 @@
                                 <p>
                                 Most of the software I have written in graduate school and my free time is open-source, which you can find on my <a href="https://github.com/edmundsj/">GitHub</a>.  I am an advocate for open-source software, and have tremendous respect for companies that choose to open-source internal tools or build business around such software. A current project is <a href="https://github.com/edmundsj/ankilol">ankilol</a>, which I use to create flashcards to help me study various topics I like to learn about.
                                 </p>
-                                <h2>Hobbies</h2>
+                                <h2>Hobbies and Personal Life</h2>
                                 <p>
                                 I am an avid backpacker - having hiked through Yosemite up half dome and back, as well as a smattering of shorter trips. I also enjoy rock climbing, both indoors and outdoors. You'll often find me after work playing board games with frineds - especially cooperative ones - with Spirit Island being my current favorite.
+                                </p>
+                                <p>
+                                I am currently engaged to my incredible partner Nikole. I moved out to Pittsburgh to support her while she completes her Ph.D. at Carnegie Mellon.
                                 </p>
 
 							</section>
@@ -68,35 +71,31 @@
 					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
+                    <footer id="footer">
 						<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
+							<h2>Working with me</h2>
+                            <p>Want to work together? Think I would be a good fit for a particular role? I'd love to hear from you! Shoot me an e-mail or message me on Linkedin.</p>
 							<ul class="actions">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="generic.html" class="button">Learn More</a></li>
 							</ul>
 						</section>
 						<section>
-							<h2>Etiam feugiat</h2>
+							<h2>Contact Me</h2>
 							<dl class="alt">
-								<dt>Address</dt>
-								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
-								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd>
+								<dt>Location</dt>
+                                <dd>Pittsburgh, PA</dd>
 								<dt>Email</dt>
-								<dd><a href="#">information@untitled.tld</a></dd>
+                                <dd><a href="#">jordan.l.edmunds - at - gmail.com</a></dd>
 							</dl>
 							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
+								<li><a href="https://medium.com/@jordan.l.edmunds" class="icon brands fa-medium alt"><span class="label">Medium</span></a></li>
+								<li><a href="https://www.youtube.com/@JordanEdmundsEECS" class="icon brands fa-youtube -f alt"><span class="label">YouTube</span></a></li>
+								<li><a href="https://github.com/edmundsj" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/jordan-edmunds-eecs/" class="icon brands fa-linkedin alt"><span class="label">Linkedin</span></a></li>
 							</ul>
 						</section>
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+                        <p class="copyright">&copy; Jordan Edmunds, 2023:</p>
 					</footer>
-
 			</div>
 
 		<!-- Scripts -->
