updated index.html with more infrastructure IC-focused work

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
 											<h2>About Me</h2>
 										</header>
 										<p>
-                                        I am a software engineer and future DevOps manager. I have worked as the technical founder of a venture-backed startup, a software engineer at Meta, and a scientist at UC Berkeley pushing the boundaries of neural interfaces.
+                                        I am an software engineer with a focus on infrastructure, automation, and continuous integration/deployment. I have worked as the technical founder of a venture-backed SaaS startup, a software engineer at Meta, and a scientist at UC Berkeley, where I earned my Ph.D.
                                         </p>
                                         <p>
-                                        I have broad technical experience in software engineering, web development, DevOps, electrical engineering, biology, statistics, fabrication, and vacuum systems. If it operates with electrons, photons, or bits, I can probably explain to you how it works.
+                                        I have broad technical experience in core software engineering, web development, networking, messaging, DevOps, bare-metal and container-based infrastructure management. My most proficient languages are python, C++, and TypeScript, and my strongest operating system is CentOS.
 										</p>
                                         <p>
-                                        I love teaching and mentoring, and thrive most in supportive roles - especially in education, infrastructure, manegement, or a combination of all three.
+                                        I love teaching and mentoring, and am a strong force for the dissemination of domain knowledge in whatever organization I am a part of.
                                         </p>
 										<ul class="actions">
 											<li><a href="about.html" class="button">Learn More</a></li>
@@ -197,7 +197,7 @@
 								<dt>Location</dt>
                                 <dd>Pittsburgh, PA</dd>
 								<dt>Email</dt>
-                                <dd><a href="#">jordan.l.edmunds - at - gmail.com</a></dd>
+                                <dd><a href="#">jordan.l.edmunds@gmail.com</a></dd>
 							</dl>
 							<ul class="icons">
 								<li><a href="https://medium.com/@jordan.l.edmunds" class="icon brands fa-medium alt"><span class="label">Medium</span></a></li>
