revised for infra focus

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/jordan_edmunds_circle.jpeg" alt="" / style="width: 100px; border-radius: 50%"></span>
 						<h1>Jordan Edmunds, Ph.D.</h1>
-						<p>Hardware / Software Engineer, Manager, and King Nerd<br />
+						<p>Infrastructure Software Engineer<br />
 					</header>
 
 				<!-- Nav -->
@@ -45,10 +45,10 @@
 											<h2>About Me</h2>
 										</header>
 										<p>
-                                        I am an software engineer with a focus on infrastructure, automation, and continuous integration/deployment. I have worked as the technical founder of a venture-backed SaaS startup, a software engineer at Meta, and a scientist at UC Berkeley, where I earned my Ph.D.
+                                        I am an software engineer with a focus on infrastructure, automation, and continuous integration/deployment. I currently work at Meta as an infrastructure-focused SWE, and  have previously worked as the technical founder of a venture-backed SaaS startup, a software engineer at Meta, and a scientist at UC Berkeley, where I earned my Ph.D.
                                         </p>
                                         <p>
-                                        I have broad technical experience in core software engineering, web development, networking, messaging, DevOps, bare-metal and container-based infrastructure management. My most proficient languages are python, C++, and TypeScript, and my strongest operating system is CentOS.
+                                        I have broad technical experience in core software engineering, web development, networking, messaging, DevOps, bare-metal and container-based infrastructure management. My most proficient languages are python, C++, and TypeScript in that order..
 										</p>
                                         <p>
                                         I love teaching and mentoring, and am a strong force for the dissemination of domain knowledge in whatever organization I am a part of.
@@ -71,7 +71,7 @@
 										<span class="icon solid major style1 fa-gem"></span>
 										<h3>Empathetic and Inclusive</h3>
                                         <p>
-                                        What I consider one of my strongest points - I care about the people around me, and thrive on their success. I believe the best ideas come from creating psychological safety, and the best ideas I've ever used have come from other people.
+                                        I care about the people around me, and thrive on their success and helping them achieve their goals. I believe the best ideas come from creating psychological safety, and the best ideas I've ever used have come from other people.
                                         </p>
 									</li>
 									<li>
@@ -85,7 +85,7 @@
 										<span class="icon solid major style3 fa-code"></span>
 										<h3>Excellent Communicator</h3>
                                         <p>
-                                        As a longtime teacher and educator, I am unusually good at breaking down and explaining complex topics at any level of detail or abstraction, and gauging the needs of my audience. It's why I'll fly through your interview process - I'll even bet money on it.
+                                        As a longtime teacher and educator, I am unusually good at breaking down complexity and explaining concepts to technical and non-technical people alike what the core, and I regularly lead technical workshops.
                                         </p>
 									</li>
 								</ul>
